# samcut

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: Makefile  README.md  examples.sh  in.bam  render_template.sh  template.md
src/: ex10.sam  main.rs
