[package]
name = "samcut"
version = "0.1.1"
edition = "2021"
authors = ["Gosuke Shibahara"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
libc = "0.2"
regex = "1"
simple-error = "0"
